# ZENgine

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  docs.graphml
.github/workflows/: Rustfmt.yml  build.yml  ci.yml  clippy.yml  publish.yml  release.yml  rust.yml  test.yml
benches/: Cargo.toml  archetype.rs  archetype_vs_old_system.rs
crates/zengine_asset/: Cargo.toml
crates/zengine_asset/src/: asset_manager.rs  assets.rs  audio_loader.rs  file_asset_io.rs  handle.rs  image_loader.rs  io_task.rs  lib.rs  wasm_asset_io.rs
crates/zengine_asset/src/io/: android_asset_io.rs  file_asset_io.rs  mod.rs  wasm_asset_io.rs
crates/zengine_audio/: Cargo.toml
crates/zengine_audio/src/: lib.rs
crates/zengine_core/: Cargo.toml
crates/zengine_core/src/: lib.rs  time.rs  timer.rs  transform.rs
crates/zengine_ecs/: Cargo.toml
crates/zengine_ecs/src/: command.rs  component.rs  entity.rs  event.rs  lib.rs  query.rs  resource.rs  system.rs  system_parameter.rs  world.rs
crates/zengine_ecs/src/query/: mod.rs  query_fetch.rs  query_iterators.rs
crates/zengine_ecs/src/system/: mod.rs  query.rs  query_iterators.rs
crates/zengine_ecs/src/system/system_parameter/: command.rs  event_parameter.rs  local_parameter.rs  mod.rs  query_parameter.rs  res_parameter.rs
crates/zengine_engine/: Cargo.toml
crates/zengine_engine/src/: lib.rs
crates/zengine_event/: Cargo.toml
crates/zengine_event/src/: input.rs  input_system.rs  lib.rs  stream.rs
crates/zengine_gamepad/: Cargo.toml
crates/zengine_gamepad/src/: lib.rs
crates/zengine_graphic/: Cargo.toml
crates/zengine_graphic/src/: camera.rs  color.rs  image_asset.rs  lib.rs  renderer.rs  renderer_utils.rs  shader.wgsl  sprite.rs  texture.rs  texture_atlas.rs  vertex.rs
crates/zengine_input/: Cargo.toml
crates/zengine_input/src/: event_system.rs  input.rs  input_system.rs  lib.rs
crates/zengine_input/src/device/: controller.rs  keyboard.rs  mod.rs  mouse.rs
crates/zengine_macro/: Cargo.toml
crates/zengine_macro/src/: lib.rs  zengine_manifest.rs
crates/zengine_math/: Cargo.toml
crates/zengine_math/src/: lib.rs  matrix4x4.rs  transform.rs  vector3.rs
crates/zengine_old/src/: engine.rs
crates/zengine_old/src/core/: join.rs
crates/zengine_old/src/event/: input_system.rs  mod.rs  stream.rs
crates/zengine_old/src/gl_utilities/: shader.rs
crates/zengine_old/src/graphics/: vertex.rs
crates/zengine_old/src/math/: matrix4x4.rs  mod.rs  transform.rs
crates/zengine_old/src/platform/: mod.rs
crates/zengine_old/src/render/: render_system.rs
crates/zengine_old/src/timing/: mod.rs
crates/zengine_physics/: Cargo.toml
crates/zengine_physics/src/: collision.rs  lib.rs  shader.wgsl  tracer.rs
crates/zengine_platform/: Cargo.toml
crates/zengine_platform/src/: lib.rs  platform_system.rs
crates/zengine_platform/src/device/: mouse.rs
crates/zengine_render/: Cargo.toml
crates/zengine_render/src/: basic.frag  basic.vert  lib.rs  render_system.rs  shader.wgsl
crates/zengine_render/src/gl_utilities/: gl_buffer.rs  mod.rs  shader.rs
crates/zengine_text/: Cargo.toml
crates/zengine_text/src/: builder.rs  error.rs  font.rs  glyph_brush_test.rs  lib.rs  pipeline.rs  recently_used.rs  shader.wgsl  text.rs  text_atlas.rs  text_render.rs
crates/zengine_text/src/old_stuff/: cache.rs  font.rs  glyph.wgsl  lib.rs  text_render.rs
crates/zengine_time/: Cargo.toml
crates/zengine_time/src/: lib.rs  timing_system.rs
crates/zengine_window/: Cargo.toml
crates/zengine_window/src/: android_utils.rs  application.rs  lib.rs
docs/: ecs.excalidraw  engine architecture overview.excalidraw  input.excalidraw  set.excalidraw
examples/: collision_system.rs  hello_world.rs  simple_sprite.rs  simple_text.rs
examples/pong/: Cargo.toml  build.rs  index.html  index.scss
examples/pong/assets/scenes/: test.yaml
examples/pong/src/: lib.rs  main.rs
src/: basic.frag  basic.vert  engine.rs  lib.rs  main.rs
src/assets/: image_loader.rs
src/gl_utilities/: gl_buffer.rs  shader.rs
src/gl_utility/: gl_buffer.rs  mod.rs  shader.rs
src/graphics/: material.rs  mod.rs  sprite.rs  vertex.rs
src/math/: matrix4x4.rs  mod.rs
zengine/: Cargo.toml
zengine/src/: basic.frag  basic.vert  circle.frag  circle.vert  engine.rs  lib.rs  trace.frag
zengine/src/assets/: image_loader.rs  mod.rs
zengine/src/basic/: frame_limiter.rs  input.rs  mod.rs  render.rs  timing.rs
zengine/src/basic/platform/: event_pump.rs  mod.rs  platform.rs  resources.rs  window.rs
zengine/src/core/: component.rs  component_manager.rs  component_storage.rs  entity.rs  event.rs  join.rs  mod.rs  scene.rs  storage.rs  store.rs  system.rs
zengine/src/device/: controller.rs  keyboard.rs  mod.rs
zengine/src/event/: controller.rs  event.rs  event_stream.rs  input.rs  input_system.rs  keyboard.rs  mod.rs  mouse.rs  stream.rs  system.rs
zengine/src/gl_utilities/: gl_buffer.rs  shader.rs
zengine/src/graphics/: camera.rs  color.rs  material.rs  mod.rs  sprite.rs  texture.rs  vertex.rs
zengine/src/math/: matrix4x4.rs  transform.rs  vector2.rs  vector3.rs
zengine/src/physics/: collision.rs  collision_system.rs  mod.rs
zengine/src/platform/: mod.rs  platform_system.rs  system.rs
zengine/src/render/: mod.rs  render_system.rs
zengine/src/timing/: mod.rs  timing_system.rs
zengine/src/world/: mod.rs  node.rs  scene.rs
zengine_ecs/: Cargo.toml
zengine_ecs/src/: archetype.rs  command.rs  component.rs  entity.rs  iterators.rs  lib.rs  query.rs  system.rs  system_parameter.rs  world.rs
zengine_macro/: Cargo.toml
zengine_macro/src/: lib.rs
zengine_macro_derive/: Cargo.toml
zengine_macro_derive/src/: lib.rs
zengine_old/: Cargo.toml
zengine_old/src/core/: component.rs  scene.rs  store.rs
zengine_old/src/device/: keyboard.rs
zengine_old/src/graphics/: color.rs
zengine_old/src/physics/: collision.rs
zengine_old/src/render/: mod.rs
