[package]
name = "zengine"
description = "A simple 2D ECS game engine"
categories = ["game-engines", "graphics", "rendering"]
keywords = ["game", "engine", "gamedev", "graphics", "zengine"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

exclude = [".github/", "crates/", "assets/", "benches/"]

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
exclude = ["benches"]
members = ["crates/*", "examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Simone Camito"]
documentation = "https://docs.rs/zengine"
repository = "https://github.com/MalpenZibo/zengine"
homepage = "https://malpenzibo.github.io/zengine"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
glam = "0.21.3"
ndk-glue = { version = "0.7", features = ["logger"] }
log = "0.4"
rustc-hash = "1.1.0"
cfg-if = "1"
winit = "0.27.3"
serde = { version = "1.0", features = ["derive"] }
gilrs = { version = "0.9.0" }
ahash = "0.8.0"

[dependencies]
zengine_asset = { path = "crates/zengine_asset" }
zengine_engine = { path = "crates/zengine_engine" }
zengine_ecs = { path = "crates/zengine_ecs" }
zengine_core = { path = "crates/zengine_core" }
zengine_graphic = { path = "crates/zengine_graphic" }
zengine_input = { path = "crates/zengine_input" }
zengine_physics = { path = "crates/zengine_physics" }
zengine_window = { path = "crates/zengine_window" }
zengine_audio = { path = "crates/zengine_audio" }
zengine_gamepad = { path = "crates/zengine_gamepad" }
zengine_macro = { path = "crates/zengine_macro" }

glam = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { workspace = true }

[dev-dependencies]
bencher = "0.1.5"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "simple_sprite"
path = "examples/simple_sprite.rs"

[[bench]]
name = "archetype_vs_old_system"
path = "benches/archetype_vs_old_system.rs"
harness = false
