[package]
name = "benches"
version = "0.1.0"
edition = "2021"
description = "Benchmarks for ZENgine"
publish = false
license = "MIT OR Apache-2.0"

[dev-dependencies]
bencher = "0.1.5"
zengine = { path = "../zengine" }
zengine_ecs = { path = "../zengine_ecs" }

[[bench]]
name = "archetype_vs_old_system"
path = "archetype_vs_old_system.rs"
harness = false