[package]
name = "zengine"
version = "0.1.0"
edition = "2018"

[dependencies]
zengine_macro_derive = { path = "../zengine_macro_derive" }
gl = "0.14.0"
sdl2 = { version = "0.33.0", features = ["bundled", "static-link"] }
auto_ops = "0.1.0"
image = "0.23.4"
downcast-rs = "1.1.1"
fnv = "1.0.7"
log = "0.4"
simplelog = "^0.7.6"
log-panics = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"