[package]
name = "zengine_asset"
version = "0.1.0"
edition = "2021"

[dependencies]
zengine_ecs = { path = "../zengine_ecs" }
zengine_macro = { path = "../zengine_macro" }

image = "0.23.10"
cfg-if = "1"
rustc-hash = "1.1.0"
crossbeam-channel = "0.5.6"
ahash = "0.8.0"
pollster = "0.2.5"
downcast-rs = "1.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = {version = "0.2.0", features = ["js"]}
