[package]
name = "zengine_audio"
description = "Provides audio functionality for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_asset = { path = "../zengine_asset" }
zengine_ecs = { path = "../zengine_ecs" }
zengine_engine = { path = "../zengine_engine" }
zengine_macro = { path = "../zengine_macro" }

log = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { version = "0.16", default-features = false, features = [
    "vorbis",
    "flac",
    "wav",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rodio = { version = "0.16", default-features = false, features = [
    "vorbis",
    "flac",
    "wav",
    "wasm-bindgen",
] }
