[package]
name = "zengine_audio"
description = "Provides audio functionality for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_asset = { workspace = true }
zengine_ecs = { workspace = true }
zengine_engine = { workspace = true }
zengine_macro = { workspace = true }

log = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { version = "0.19", default-features = false, features = [
    "vorbis",
    "flac",
    "wav",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rodio = { version = "0.19", default-features = false, features = [
    "vorbis",
    "flac",
    "wav",
    "wasm-bindgen",
] }
