[package]
name = "zengine_core"
description = "Provides generic core functionality for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_engine = { path = "../zengine_engine", version = "0.0.1" }
zengine_ecs = { path = "../zengine_ecs", version = "0.0.1" }
zengine_macro = { path = "../zengine_macro", version = "0.0.1" }

log = { workspace = true }
glam = { workspace = true }

instant = "0.1.12"
