[package]
name = "zengine_core"
description = "Provides generic core functionality for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_engine = { workspace = true }
zengine_ecs = { workspace = true }
zengine_macro = { workspace = true }

log = { workspace = true }
glam = { workspace = true }

instant = "0.1.12"
