[package]
name = "zengine_ecs"
description = "ZENgine's entity component system"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_macro = { path = "../zengine_macro", version = "*" }

rustc-hash = { workspace = true }

nohash-hasher = "0.2.0"
