[package]
name = "zengine_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
zengine_ecs = { path = "../zengine_ecs" }
cfg-if = "1"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simplelog = "^0.7.6"
log-panics = "2.0.0"