[package]
name = "zengine_engine"
description = "Provides engine functionality for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_ecs = { workspace = true }

log = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simplelog = "^0.7.6"
log-panics = "2.0.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
