[package]
name = "zengine_gamepad"
description = "Provides gamepad functionality for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_ecs = { path = "../zengine_ecs", version = "*" }
zengine_engine = { path = "../zengine_engine", version = "*" }
zengine_input = { path = "../zengine_input", version = "*" }
zengine_macro = { path = "../zengine_macro", version = "*" }

log = { workspace = true }
cfg-if = { workspace = true }
gilrs = { workspace = true }
