[package]
name = "zengine_gamepad"
description = "Provides gamepad functionality for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_ecs = { workspace = true }
zengine_engine = { workspace = true }
zengine_input = { workspace = true }
zengine_macro = { workspace = true }

log = { workspace = true }
cfg-if = { workspace = true }
gilrs = { workspace = true }
