[package]
name = "zengine_graphic"
version = "0.1.0"
edition = "2021"

[dependencies]
zengine_asset = { path = "../zengine_asset" }
zengine_ecs = { path = "../zengine_ecs" }
zengine_core = { path = "../zengine_core" }
zengine_macro = { path = "../zengine_macro" }
zengine_window = { path = "../zengine_window" }
rustc-hash = "1.1.0"
log = "0.4"
winit = "0.27.2"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
glam = "0.21.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.13", features = ["webgl"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.13.1"
