[package]
name = "zengine_graphic"
description = "Provides graphic functionality for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_asset = { path = "../zengine_asset", version = "0.0.1" }
zengine_ecs = { path = "../zengine_ecs", version = "0.0.1" }
zengine_core = { path = "../zengine_core", version = "0.0.1" }
zengine_macro = { path = "../zengine_macro", version = "0.0.1" }
zengine_window = { path = "../zengine_window", version = "0.0.1" }
zengine_engine = { path = "../zengine_engine", version = "0.0.1" }

rustc-hash = { workspace = true }
cfg-if = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
ahash = { workspace = true }

pollster = "0.2"
bytemuck = { version = "1.4", features = ["derive"] }
image = "0.23.10"
rectangle-pack = "0.4.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.13", features = ["webgl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.13.1"
