[package]
name = "zengine_graphic"
description = "Provides graphic functionality for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_asset = { workspace = true }
zengine_ecs = { workspace = true }
zengine_core = { workspace = true }
zengine_macro = { workspace = true }
zengine_window = { workspace = true }
zengine_engine = { workspace = true }

rustc-hash = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
ahash = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["webgl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { workspace = true }

pollster = "0.2"
bytemuck = { version = "1.4", features = ["derive"] }
image = "0.24.5"
rectangle-pack = "0.4.2"
