[package]
name = "zengine_input"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
fnv = "1.0.7"
log = "0.4"
winit = { version = "0.27.2", features = ["serde"] }
gilrs = {version = "0.8.1", features = ["serde-serialize"]}
zengine_ecs = { path = "../zengine_ecs" }
zengine_engine = { path = "../zengine_engine" }

[dev-dependencies]
serde_yaml = "0.8"