[package]
name = "zengine_input"
description = "Provides input functionality for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_ecs = { path = "../zengine_ecs" }
zengine_engine = { path = "../zengine_engine" }
zengine_macro = { path = "../zengine_macro" }

winit = { workspace = true, features = ["serde"] }
log = { workspace = true }
gilrs = { workspace = true, features = ["serde-serialize"] }
serde = { workspace = true }

fnv = "1.0.7"

[dev-dependencies]
serde_yaml = "0.8"
