[package]
name = "zengine_macro"
description = "Macro for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
toml = "0.5.8"
