[package]
name = "zengine_physics"
description = "Provides physics functionality for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_ecs = { path = "../zengine_ecs", version = "*" }
zengine_core = { path = "../zengine_core", version = "*" }
zengine_macro = { path = "../zengine_macro", version = "*" }

log = { workspace = true }
rustc-hash = { workspace = true }
glam = { workspace = true }
