[package]
name = "zengine_physics"
description = "Provides physics functionality for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_ecs = { workspace = true }
zengine_core = { workspace = true }
zengine_macro = { workspace = true }

log = { workspace = true }
rustc-hash = { workspace = true }
glam = { workspace = true }
