[package]
name = "zengine_render"
version = "0.1.0"
edition = "2021"

[dependencies]
zengine_ecs = { path = "../zengine_ecs" }
zengine_graphic = { path = "../zengine_graphic" }
zengine_math = { path = "../zengine_math" }
zengine_physics = { path = "../zengine_physics" }
zengine_window = { path = "../zengine_window" }
zengine_macro = { path = "../zengine_macro" }
rustc-hash = "1.1.0"
gl = "0.14.0"
glutin = "0.29.1"
log = "0.4"
winit = "0.27.2"
raw-window-handle = "0.5.0"
