[package]
name = "zengine_text"
description = "Provides text functionality for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_ecs = { workspace = true }
zengine_engine = { workspace = true }
zengine_core = { workspace = true }
zengine_asset = { workspace = true }
zengine_macro = { workspace = true }
zengine_graphic = { workspace = true }
zengine_window = { workspace = true }

log = { workspace = true }
glam = { workspace = true }
rustc-hash = { workspace = true }

fontdue = "0.9"
etagere = "0.2"
typed-builder = "0.19"

[dependencies.bytemuck]
version = "1"
features = ["derive"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["webgl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { workspace = true }
