[package]
name = "zengine_window"
description = "Provides windowing functionality for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_ecs = { path = "../zengine_ecs" }
zengine_engine = { path = "../zengine_engine" }
zengine_input = { path = "../zengine_input" }
zengine_macro = { path = "../zengine_macro" }

rustc-hash = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
cfg-if = { workspace = true }
winit = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"
jni = "0.19.0"
