[package]
name = "zengine_window"
description = "Provides windowing functionality for ZENgine"
keywords = ["zengine"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zengine_ecs = { workspace = true }
zengine_engine = { workspace = true }
zengine_input = { workspace = true }
zengine_macro = { workspace = true }

rustc-hash = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

winit = { workspace = true, features= ["rwh_06"] }

